--- a/package.json
+++ b/package.json
@@ -1,31 +1,43 @@
 {
-  "name": "agencia-app",
-  "version": "0.1.0",
+  "name": "muse-ant-design-dashboard",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-toast": "^1.2.6",
+    "@ant-design/colors": "^7.2.0",
+    "@ant-design/icons": "^4.6.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "@supabase/supabase-js": "^2.49.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.479.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "all": "^0.0.0",
+    "antd": "^4.16.6",
+    "apexcharts": "^3.35.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
-    "react": "^19.0.0",
+    "moment-timezone": "^0.5.47",
+    "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-big-calendar": "^1.18.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0",
-    "react-scripts": "5.0.1",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^17.0.2",
+    "react-is": "^19.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "supabase": "^2.19.7",
     "tailwind-merge": "^3.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "cross-env CI=false cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0"
   }
 }
