--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@supabase/supabase-js": "^2.49.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -17,22 +18,25 @@
     "apexcharts": "^3.35.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "clsx": "^2.1.0",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "install": "^0.13.0",
+    "lucide-react": "^0.484.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^17.0.2",
     "react-is": "^19.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "supabase": "^2.19.7",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -60,6 +64,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0"
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3"
   }
 }
