--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,32 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependências do Node
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Arquivos de log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Dependências de ambiente
+.env
+.env.local
+.env.*.local
+
+# Diretórios do build
+build/
+dist/
+
+# Diretórios do sistema operacional
+.DS_Store
+Thumbs.db
+
+# Editor de código
+.vscode/
+.idea/
+
+# Arquivos do sistema
+*.swp
+*.swo
+
+# Arquivos de dependências
+package-lock.json
+yarn.lock
