--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "all": "^0.0.0",
     "antd": "^4.16.6",
     "apexcharts": "^3.35.0",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.0",
