--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "install": "^0.13.0",
-    "lucide-react": "^0.484.0",
+    "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "react": "^17.0.2",
@@ -67,6 +67,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.26.3"
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3"
   }
 }
