fix timezone issue UTC

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
+    "luxon": "^3.6.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "react": "^17.0.2",
