--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "muse-ant-design-dashboard",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@ant-design/colors": "^7.2.0",
